@@ -3,8 +3,8 @@ abstract: 'Memory process reporting.'
 author:
   - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
+  Capture::Tiny: 0
   ExtUtils::MakeMaker: 6.36
-  IO::CaptureOutput: 0
   Test::More: 0
   Test::NoWarnings: 0
 configure_requires:
